<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item android:title="Main menu">
        <menu android:checkableBehavior="single">

            <item
                android:title="@string/str_home"
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home">
            </item>
            <item
                android:title="@string/str_settings"
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings">
            </item>

        </menu>
    </item>
    <item android:title="Extra menu">
        <menu android:checkableBehavior="single">
            <item
                android:title="@string/str_info"
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_info">

            </item>
        </menu>
    </item>
</menu>